# simple-raytracer

./: CMakeLists.txt
src/: main.c
src/math/: vector.c  vector.h
src/raytracer/: camera.c  camera.h  canvas.c  canvas.h  light.h  material.c  material.h  ray.h  world.c  world.h
src/shapes/: plane.c  plane.h  shape.h  sphere.c  sphere.h
src/utils/: utils.c  utils.h
